--- a/index.html
+++ b/index.html
@@ -3,21 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Tic Tac Toe</title>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Rubik:wght@400;600&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="title-container">
+    <div class="header-container">
+        <div class="player-one-info"></div>
         <h1 class="title">Tic Tac Toe</h1>
+        <div class="player-two-info"></div>
     </div>
     <div class="gameboard-container">
         <div class="gameboard">
-
+            <div class="grid-square" data-x="0" data-y="0"></div>
+            <div class="grid-square" data-x="0" data-y="1"></div>
+            <div class="grid-square" data-x="0" data-y="2"></div>
+            <div class="grid-square" data-x="1" data-y="0"></div>
+            <div class="grid-square" data-x="1" data-y="1"></div>
+            <div class="grid-square" data-x="1" data-y="2"></div>
+            <div class="grid-square" data-x="2" data-y="0"></div>
+            <div class="grid-square" data-x="2" data-y="1"></div>
+            <div class="grid-square" data-x="2" data-y="2"></div>
         </div>
     </div>
     <div class="score-container">
         <div class="score">
-
         </div>
     </div>
 </body>
