--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
     <div class="header-container">
-        <div class="player-one-info"></div>
+        <div class="player-info">
+            <div class="player-one-name">EXAMPLE NAME</div>
+            <div class="player-one-score">Score : 0</div>
+        </div>
         <h1 class="title">Tic Tac Toe</h1>
-        <div class="player-two-info"></div>
+        <div class="player-info">
+            <div class="player-two-name">EXAMPLE NAME</div>
+            <div class="player-two-score">Score : 0</div>
+        </div>
     </div>
     <div class="gameboard-container">
         <div class="gameboard">
@@ -26,9 +32,8 @@
             <div class="grid-square" data-x="2" data-y="2"></div>
         </div>
     </div>
-    <div class="score-container">
-        <div class="score">
-        </div>
+    <div class="buttons-container">
+        <button class="reset"></button>
     </div>
 </body>
 </html>
