fix: Fix bug with score counting wrong.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <div class="grid-square" data-x="2" data-y="2"></div>
         </div>
     </div>
+    <div id="winner-box" class="hidden">
+        <div class="winner-content">
+            <div id="winner-message"></div>
+        </div>
+    </div>
     <div class="buttons-container">
         <button class="reset"></button>
     </div>
