--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="buttons-container">
-        <button class="reset"></button>
+        <button class="reset">Reset Game</button>
     </div>
 </body>
 </html>
